openshift-yamls/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-backend-service
spec:
  type: ClusterIP
  ports:
    - name: hello-world-backend-port
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    application: hello-world-backend
