openshift-yamls/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-frontend-service
spec:
  type: ClusterIP
  ports:
    - name: hello-world-frontend-port
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    application: hello-world-frontend
