openshift-yamls/backend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: hello-world-backend
  name: hello-world-backend
spec:
  host: 
  port:
    targetPort: hello-world-backend-port
  to:
    kind: Service
    name: hello-world-backend-service
    weight: 100
